tests/test_files_pa3/errors/ContBreakOutsideWhile3.ic
class A
{
	static void main(string[] args) { }
	
	void c(int b)
	{
		while (b > 0)
		{
			while (b > 1)
			{
				{
					continue;
				}
				break;
			}			
			break;
		}
		continue;
	}
}